# flowlens

./: .env  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.full.yml  docker-compose.yml  plan.txt  pyproject.toml  requirements.txt
docs/: BACKLOG.md  PARITY_MATRIX.md  PRD.md  TO_IMPLEMENT.md  system-administration.md
docs/architecture/: PHASE1_ARCHITECTURE.md  SCALING_MODEL.md
docs/database/: DEPENDENCY_GRAPH_SCHEMA.md  FLOW_SCHEMA.md
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/alerts/: AlertDetailSlideOver.tsx
frontend/src/components/analysis/: BlastRadiusTopology.tsx
frontend/src/components/assets/: BulkActionToolbar.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/baseline/: BaselinePanel.tsx  ComparisonResultsPanel.tsx  CreateBaselineModal.tsx
frontend/src/components/common/: AssetTypeSelect.tsx  Badge.tsx  Button.tsx  Card.tsx  Loading.tsx  StatCard.tsx  Table.tsx  Toast.tsx
frontend/src/components/layout/: GroupEditModal.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/constants/: assetTypes.ts
frontend/src/hooks/: useForceSimulationWorker.ts  useTopologyFilters.ts  useWebSocket.ts  useWebSocketEvents.ts
frontend/src/pages/: AlertRules.tsx  Alerts.tsx  Analysis.tsx  ApplicationDetail.tsx  Applications.tsx  AssetDetail.tsx  Assets.tsx  BackupRestore.tsx  Changes.tsx  ClassificationRules.tsx  Dashboard.tsx  Dependencies.tsx  DiscoveryProviders.tsx  Login.tsx  MLTraining.tsx  Maintenance.tsx  SAMLConfiguration.tsx  SegmentationPolicies.tsx  SegmentationPolicyDetail.tsx  Setup.tsx  SystemSettings.tsx  Tasks.tsx  Topology.tsx  UserManagement.tsx
frontend/src/services/: api.ts
frontend/src/stores/: appStore.ts  authStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: arcLayout.ts  date.ts  format.ts  graphLayouts.ts  layoutSuggestions.ts  network.ts
frontend/src/workers/: forceSimulation.worker.ts
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_flow_tables.py  003_graph_tables.py  004_add_flow_aggregates_is_processed.py  005_add_saved_views.py  006_add_classification_rules.py  007_fix_cidr_functions.py  008_add_alert_rules.py  009_add_maintenance_windows.py  010_asset_classification.py  011_gateway_detection.py  012_bigint_columns.py  013_topology_performance.py  014_background_tasks.py  015_fix_blast_radius_null.py  016_add_entry_points.py  017_add_entry_point_port_protocol.py  018_add_auth_tables.py  019_drop_unused_indexes.py  020_performance_tuning.py  021_partition_management.py  022_multiple_entry_points.py  023_add_discovery_status.py  024_discovery_providers.py  025_segmentation_policies.py  026_add_folders.py  027_add_topology_exclusions.py  028_add_application_layouts.py  029_add_application_baselines.py  030_add_baseline_change_tracking.py  031_add_auto_clear_fields.py  032_add_ml_model_registry.py
scripts/: build_shipped_model.py  create_admin.py  retrain_shipped_model.py
src/flowlens/: __init__.py
src/flowlens/api/: __init__.py  cache.py  dependencies.py  main.py  startup.py
src/flowlens/api/auth/: jwt.py
src/flowlens/classification/: __init__.py  constants.py  feature_extractor.py  heuristics.py  main.py  scoring_engine.py  worker.py
src/flowlens/common/: __init__.py  config.py  database.py  exceptions.py  health.py  logging.py  metrics.py  settings_service.py
src/flowlens/discovery/: __init__.py  cache.py  enricher.py  kubernetes.py  migration.py  nutanix.py  vcenter.py
src/flowlens/enrichment/: __init__.py  cache.py  correlator.py  main.py  worker.py
src/flowlens/graph/: __init__.py  blast_radius.py  impact.py  spof.py  traversal.py
src/flowlens/ingestion/: __init__.py  backpressure.py  main.py  router.py  server.py
src/flowlens/models/: __init__.py  alert_rule.py  asset.py  auth.py  base.py  baseline.py  change.py  classification.py  dependency.py  discovery.py  flow.py  folder.py  gateway.py  layout.py  maintenance_window.py  ml.py  saved_view.py  segmentation.py  task.py  topology_exclusion.py
src/flowlens/notifications/: __init__.py  base.py  email.py  pagerduty.py  slack.py  teams.py  webhook.py
src/flowlens/resolution/: __init__.py  aggregator.py  alert_rule_evaluator.py  asset_mapper.py  change_detector.py  dependency_builder.py  gateway_inference.py  main.py  worker.py
src/flowlens/schemas/: ai_explain.py  ai_layout.py  alert.py  alert_rule.py  analysis.py  asset.py  asset_classification.py  auth.py  backup.py  baseline.py  change.py  classification.py  dependency.py  discovery.py  discovery_providers.py  folder.py  gateway.py  layout.py  maintenance.py  ml.py  saved_view.py  search.py  segmentation.py  settings.py  task.py  topology.py
src/flowlens/services/: __init__.py  ai_explain.py  auth_service.py  baseline_monitor.py  llm_layout.py  policy_generator.py  saml_service.py
src/flowlens/tasks/: __init__.py  classification_task.py  executor.py  ml_training_task.py
tests/: __init__.py  conftest.py
tests/integration/: test_api_alerts.py  test_api_assets.py  test_api_changes.py  test_api_classification.py  test_api_dependencies.py  test_api_discovery_providers.py  test_api_gateways.py  test_api_topology.py  test_api_topology_exclusions.py
tests/unit/: test_aggregator.py  test_alert_rule_evaluator.py  test_backpressure.py  test_cache.py  test_change_detector.py  test_classification_constants.py  test_classification_import_export.py  test_dependency_builder.py  test_discovery_migration.py  test_gateway_inference.py  test_heuristics.py  test_kubernetes_discovery.py  test_multi_provider_cache.py  test_multi_provider_enricher.py  test_netflow_v5_parser.py  test_nutanix_discovery.py  test_rate_limit.py  test_scoring_engine.py  test_vcenter_discovery.py
(+65 files in other folders)
